[package]
name = "voice-spaces-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
socketioxide = { version = "0.13", features = ["state"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
dashmap = "5.5"
uuid = { version = "1.8", features = ["v4"] }
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
bcrypt = "0.15"
jsonwebtoken = "9.3"
chrono = "0.4"


